style.css
/* ... */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                         GAME                             */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#game {
	width: 100%;
	height: var(--round-height);
	padding-inline: var(--frame-padding-inline);
	margin-block: var(--game-margin-y);

	display: flex;
	flex-flow: column nowrap;

	overflow: hidden;
}

.round {
	display: flex;
	flex-flow: column nowrap;

	transition: all 1s ease-out;
}

.target {
	width: fit-content;
	height: var(--target-height);

	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	gap: var(--padding-length-word);
}

.length {
	width: fit-content;
	min-width: var(--length-width);
	height: 3.5rem;
	padding: var(--tl-padding-block) 0.75rem;
	border: 2px solid;
	border-radius: 8px;

	display: flex;
	align-items: center;
	justify-content: center;

	font-size: var(--length-fs);
}

.word {
	padding-inline: var(--word-px);
	height: var(--input-height);

	border: var(--word-border-width) solid;
	border-radius: 8px;

	display: flex;
	flex-flow: row nowrap;
	align-items: center;

	transition: gap 1s ease-out, padding 1s ease-out, width 1px ease-out;
}

.letter {
	width: calc(
		(var(--word-width-max) / var(--num-letters-max)) - 2 * var(--letter-mx)
	);
	border-bottom: 2px solid;
	text-align: center;
	transition: font-size 1s ease-out, margin 1s ease-out, width 1s ease-out;
}

.complete {
	.letter {
		border: none;
	}
}

.active {
	.length,
	.word {
		border-width: 3px;
		box-shadow: 0px 0px 18px white;
		font-weight: bold;
	}
	.letter {
		border-width: 3px;
	}
}

.locked {
	.letter {
		border: none;
	}
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                       KEYBOARD                           */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#keyboard {
	width: min(100%, 100vw);
	height: var(--keyboard-height);
	padding-inline: var(--keyboard-padding-inline);
	padding-block: 1rem;
	border-top: 3px double;

	display: flex;
	flex-direction: column;
	gap: 8px;

	touch-action: manipulation;
	/* ^ Disables double-tap-to-zoom on mobile */

	--num-keys: 10;
	--num-keyGaps: 9;
	--key-width: 9%;
	--key-gap: calc(
		(100% - (var(--num-keys) * var(--key-width))) / (var(--num-keyGaps))
	);
}

.keyboard-row {
	width: 100%;
	display: flex;
	flex-flow: row nowrap;
	justify-content: center;
	gap: var(--key-gap);
}

.keyboard-key {
	width: var(--key-width);
	height: 3.25rem;

	border: 2px solid;
	/* border-bottom: 4px solid; */
	border-radius: 6px;

	font-size: 1.375rem;

	cursor: pointer;

	display: flex;
	align-items: center;
	justify-content: center;

	transition: background-color 1s ease-out;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                        MODALS                            */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

h1 {
	font-size: 1.5rem;
	margin-bottom: 1rem;
}

h2 {
	font-size: 1rem;
	margin-block: 1.25rem 0.75rem;
	border-bottom: 2px solid var(--c1-dark-hsl);
}

.modal-screen {
	display: none;
	position: fixed;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	cursor: pointer;
}

.modal-content {
	width: min(500px, 96vw);
	height: fit-content;
	border: 3px solid;
	margin: 4rem auto;
	padding: 1.5rem;
	cursor: default;
}

.closeRow {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: end;
}

.closeButton {
	background-color: transparent;
	border: none;
	cursor: pointer;
}

/* .closeButton:hover {
	color: hsl(13, 40%, 72%);
} */

.fa-xmark {
	font-size: 1.25rem;
	color: hsl(13, 40%, 20%);
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                     STATS SCREEN                         */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#wordListValue {
	display: flex;
	flex-flow: column nowrap;
	gap: 0.5rem;
}

.stat-wordList-target {
	display: flex;
	flex-flow: row nowrap;
	gap: 0.5rem;
	align-items: center;
}

.stat-wordList-length {
	width: 3ch;
	text-align: right;
}

.stat-wordList-word {
	letter-spacing: 0.25rem;
}

.stat-wordList-trigram {
	border: 1px solid;
	border-radius: 4px;
	padding-left: 0.25rem;
	margin-right: 0.125rem;
	background-color: white;
}

#statListValue {
	display: flex;
	flex-flow: row;
	justify-content: space-between;
}

.stat-statList-item {
	width: 7ch;
	/* border: 1px solid; */
	display: flex;
	flex-flow: column nowrap;
	/* align-items: ; */
	/* justify-content: center; */
	text-align: center;
}

.stat-statList-itemValue {
	font-size: 2rem;
}

#statDistributionValue {
	display: flex;
	flex-flow: column nowrap;
	gap: 0.25rem;
}

.stat-statDistribution-item {
	display: flex;
	flex-flow: row nowrap;
	gap: 0.5rem;
	align-items: center;
}

.stat-statDistribution-itemLength {
	width: 3ch;
	text-align: right;
}

.stat-statDistribution-itemCount {
	letter-spacing: 0.25rem;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                      HELP SCREEN                         */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
.help-trigram {
	padding-inline: 0.5ch;
	background-color: white;
	border: 1px solid black;
	border-radius: 4px;
	text-transform: capitalize;
	font-weight: bold;
}

.help-trigram-subtle {
	font-weight: bold;
	text-decoration: underline;
}

ul {
	margin-bottom: 1.5rem;
}

li {
	margin-left: 2ch;
	margin-bottom: 0.375rem;
	font-size: 1.125rem;
}

